# ci40-info-daemon

./: .gitignore  .travis.yml  CMakeLists.txt  DeviceInfo.c  DeviceInfo.h  InfoDaemon.c  Log.h  README.md
src/: CMakeLists.txt  DeviceInfo.c  DeviceInfo.h  FirmwareUpdate.c  FirmwareUpdate.h  InfoDaemon.c  Log.h
